got vertical menu working - styles still need work

--- a/app/views/shared/_event_menu_item.html.erb
+++ b/app/views/shared/_event_menu_item.html.erb
@@ -1,15 +1,9 @@
 <% if event_menu_item.nil? %>
-	<li><br /><%= t('app.msgs.no_events_for_date') %><br /></li>
+	<li><br /><%= t('app.msgs.loading') %><br /></li>
 <% else %>
 	<li>
-		<p><%= link_to event_menu_item.title, event_path(event_menu_item) %></p>
-		<p><%= format_time(event_menu_item.start) %> - <%= format_time(event_menu_item.end) %></p>
-		<p><%= truncate(event_menu_item.description, :length => 100, :separator => ' ') %></p>
-		<p>
-			<% if event_menu_item.categories.count > 0 %>
-				<%= t('.categories') %> <% event_menu_item.categories.each do |cat| %><%= link_to "[#{cat.title}]", category_events_path(cat.title) %> <% end %>
-			<% else %>&nbsp;<% end %>
-		</p>
-		
+		<p class="event_menu_item_time"><%= pretty_time(event_menu_item.start) %></p>
+		<p class="event_menu_item_title"><%= link_to event_menu_item.title, event_path(event_menu_item) %></p>
+		<p class="event_menu_item_address"><%= event_menu_item.address %></p>
 	</li>
 <% end %>
