added script to remove tabs from strings when saving record; removed justify style from text on event#index page

--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -434,7 +434,7 @@ img {
       #content-board > table td div.body
       {
         width: 100%;
-        text-align: justify;
+/*        text-align: justify;*/
       }
 
       #partners
