--- a/app/views/events/_index.html.erb
+++ b/app/views/events/_index.html.erb
@@ -1,46 +1,3 @@
 <% is_html = ((defined? html) && html) ? true : false %>
 
-<% if is_html && user_signed_in? %>
-<div class="form-actions">
-  <%= link_to t('app.buttons.new_event'), new_event_path, :class => "btn btn-mini" %>
-</div>
-<% end %>
-
-<table class="grid">
-
-  <% @events.each_with_index do |event, i| %>
-
-   <% if i % 2 == 0 %>
-    <tr>
-    <% attr = ' class="left"'.html_safe %>
-   <% else %>
-    <% attr = ' class="right"'.html_safe %>
-   <% end %>
-
-      <td<%= attr %>>
-        <div class="header">
-          <%= format_datetime(event.start) %>
-        </div>
-        <div class="body">
-          <%= link_to event.title, event_path(event) %>
-        </div>
-				<div>
-					<%= link_to t('app.buttons.ics'), events_exportICS_path(:type => "event", :typespec => event.id), :class => "btn btn-mini" %>
-				<% if user_signed_in? %>
-				        <%= link_to t('app.buttons.edit'), edit_event_path(event), :class => 'btn btn-mini' %>
-				        <%= link_to t('app.buttons.delete'), event_path(event), :method => :delete, :confirm => t('app.msgs.delete_confirm'), :class => 'btn btn-mini btn-danger' %>
-				<% end %>
-				</div>
-      </td>
-
-   <% if i % 2 == 1 %>
-    </tr>
-   <% end %>
-
-  <% end %>
-
-  <% if @events.count % 2 == 1 %>
-    </tr>
-  <% end; %>
-
-</table>
+<%= render 'shared/event_list', :is_html => is_html %>
