--- a/app/views/events/category.html.erb
+++ b/app/views/events/category.html.erb
@@ -1,7 +1,9 @@
+<% title t('.title') %>
+
 <%= render 'category', :html => true %>
 
 <% if !@events.nil? && @events.length > 0 %>
-<div>
+<div class="form-actions">
 	<%= link_to t('app.buttons.pdf'), category_events_path(:cat => params[:cat], :page => params[:page], :format => 'pdf'), :class => "btn btn-mini", :target => "_blank" %>
 
 	<%= link_to t('app.buttons.ics'), events_exportICS_path(:type => "category", :typespec => params[:cat]), :class => "btn btn-mini" %>
