--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -593,3 +593,17 @@ img {
       {
         float: right;
       }
+
+.btn-export {
+	padding: 0px 5px;
+	color: #000;
+	text-decoration:none !important;
+	border: 1px solid #000;
+	font-size: 11px;
+	line-height: 14px;
+	display: inline-block;
+	text-align: center;
+	vertical-align: middle;
+}
+
+
