--- a/app/views/german_week/_search_results.html.erb
+++ b/app/views/german_week/_search_results.html.erb
@@ -30,7 +30,7 @@
           </div>
 					<div>
 					<% if is_html %>
-						<%= link_to t('app.buttons.ics'), events_exportICS_path(:type => "event", :typespec => event.id), :class => "btn btn-mini" %>
+						<%= link_to t('app.buttons.ics'), events_exportICS_path(:type => "event", :typespec => event.id), :class => "btn-export" %>
 						<% if user_signed_in? %>
 							      <%= link_to t('app.buttons.edit'), edit_event_path(event), :class => 'btn btn-mini' %>
 							      <%= link_to t('app.buttons.delete'), event_path(event), :method => :delete, :confirm => t('app.msgs.delete_confirm'), :class => 'btn btn-mini btn-danger' %>
