updated forms so locale assigned to correct data; trying to get pdf to work

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -3,10 +3,18 @@
 	<%= f.semantic_errors %>
 	<%= f.inputs :for => :category_translations do |category_translation, i| %>
 
-		<% formLocale = @locales[i-1].language %>
+		<%  formLocale = nil
+				formLocaleName = nil
+			@locales.each do |locale| 
+			 if locale.language == @category.category_translations[i-1].locale 
+				 formLocale = locale.language 
+				 formLocaleName = locale.name
+					break
+			 end 
+		 end %>
 
 		<div id="form-<%= formLocale %>" class="multilanguage">
-			<h3><%= @locales[i-1].name %></h3>
+			<h3><%= formLocaleName %></h3>
 			<div class="control-group">
 			  <%= category_translation.label "#{@locales[i-1].name} #{:title}", :class => 'control-label' %>
 			  <div class="controls">
