--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -12,11 +12,18 @@
   <% end %>
 
 	<%= f.inputs :for => :page_translations do |page_translation, i| %>
-		<% formLocale = @locales[i-1].language %>
-		
-		
+		<%  formLocale = nil
+				formLocaleName = nil
+			@locales.each do |locale| 
+			 if locale.language == @page.page_translations[i-1].locale 
+				 formLocale = locale.language 
+				 formLocaleName = locale.name
+					break
+			 end 
+		 end %>
+
 		<div id="form-<%= formLocale %>" class="multilanguage">
-			<h3><%= @locales[i-1].name %></h3>
+			<h3><%= formLocaleName %></h3>
 			<div class="control-group">
 			  <%= page_translation.label :title, :class => 'control-label' %>
 			  <div class="controls">
