hiding all pdf links with style

--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -73,8 +73,8 @@
 
 	<% if is_html %>
 		<p>
-			<%= link_to t('app.buttons.pdf'), event_path(@event, :format => 'pdf', :debug => true), :class => "btn-export", :target => "_blank" %>
-			<%= link_to t('app.buttons.pdf'), event_path(@event, :format => 'pdf'), :class => "btn-export", :target => "_blank" %>
+			<%= link_to t('app.buttons.pdf'), event_path(@event, :format => 'pdf', :debug => true), :class => "btn-export-hide", :target => "_blank" %>
+			<%= link_to t('app.buttons.pdf'), event_path(@event, :format => 'pdf'), :class => "btn-export-hide", :target => "_blank" %>
 		</p>
 		<p>
 			<%= link_to t('app.buttons.ics'), events_exportICS_path(:type => "event", :typespec => @event.id), :class => "btn-export" %>
