added text to logo

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <% title t('.title') %>
 
-<%= render 'index', :html => true %>
+<%= render 'shared/event_list', :html => true %>
 
 <% if !@events.nil? && @events.length > 0 %>
 <div class="form-actions">
