--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -112,6 +112,43 @@ img {
         float: left;
       }
 
+      #header .c1
+      {
+        opacity: 1;
+        transition: opacity .4s;
+        -moz-transition: opacity .3s;
+        -webkit-transition: opacity .4s;
+        -o-transition: opacity .3s;
+      }
+
+      #header .c1:hover
+      {
+        opacity: .7;
+      }
+
+      #header .c1 a
+      {
+        text-decoration: none;
+      }
+
+      #header .c1 img
+      {
+        float: left;
+      }
+
+      #header .c1 .logo-text
+      {
+        color: #2f2f2f;
+        font-weight: bold;
+        font-size: 12px;
+        width: 130px;
+        display: block;
+        text-align: left;
+        float: left;
+        padding-top: 32px;
+        margin-left: -32px;
+      }
+
       #header > .c2
       {
         margin-left: 150px;
@@ -345,7 +382,7 @@ img {
         background: #f4f4f4;
         cursor: pointer;
         width: 173px;
-        padding: 9px 0 9px 12px;
+        padding: 8px 0 8px 12px;
       }
 
       #content .menu  a:first-child
@@ -607,7 +644,9 @@ img {
 }
 
 .btn-export-hide {
+  /*
 display: none;
+  */
 }
 
 
