added ambassador signature to home page

--- a/app/views/german_week/index.html.erb
+++ b/app/views/german_week/index.html.erb
@@ -9,5 +9,8 @@
 <div>
 	<%= simple_format(@page.description) %>
 </div>
+<div id="img_signature">
+	<img src="/assets/images/signature.jpg" />
+</div>
 
 <% end %>
