--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -66,6 +66,18 @@ img {
 
       td { vertical-align: top !important; }
 
+      ::selection
+      {
+        background: rgba(1, 79, 237, .5);
+        color: white;
+      }
+
+      ::-moz-selection
+      {
+        background: rgba(255, 205, 7, .8);
+        color: white;
+      }
+
       @font-face
       {
         font-family: fightme;
@@ -114,7 +126,7 @@ img {
 
       #header .c1
       {
-        opacity: 1;
+        opacity: .8;
         transition: opacity .4s;
         -moz-transition: opacity .3s;
         -webkit-transition: opacity .4s;
@@ -123,7 +135,7 @@ img {
 
       #header .c1:hover
       {
-        opacity: .7;
+        opacity: 1;
       }
 
       #header .c1 a
