added link to disclaimer page; updated text in logo to use translations

--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -633,12 +633,13 @@ img {
         text-decoration: underline;
       }
 
-      #footer > .r3 > .c1
+      #footer > .r3 > .c1, #footer > .r3 > .c2
       {
         float: left;
+				width: 40%;
       }
 
-      #footer > .r3 > .c2
+      #footer > .r3 > .c3
       {
         float: right;
       }
