--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -3,8 +3,6 @@
 
 <% title @event.title %>
 
-<p id="notice"><%= notice %></p>
-
 <div id="time-container">
 	<div id="time-block">
 		<p id="event_time">
@@ -33,33 +31,8 @@
 				<br />
 				<%= link_to @event.url2, @event.url2 %>
 			<% end %>
-
 		</p>
 
-		<% if !@event.categories.nil? && @event.categories.length > 0 %>
-		<p>
-			<strong><%= t('.category_header') %></strong>
-			<br />
-			<% @event.categories.each_with_index do |c, i| %>
-				<% separator = ((@event.categories.count - 1) != i) ? ', ' : '' %>
-				<%= link_to c.title, category_events_path(c.title) %><%= separator %>
-			<% end %>
-		</p>
-		<% end %>
-
-		<% if !@event.sponsors.nil? && @event.sponsors.length > 0 %>
-		<p>
-			<strong><%= t('.sponsor_header') %></strong>
-			<br />
-			<% @event.sponsors.each do |s| %>
-				<% if !s.logo_file_name.nil? %>
-					<%= link_to(image_tag(s.logo.url), sponsor_path(s)) %>
-				<% else %>
-					<%= link_to(s.title, sponsor_path(s)) %>
-				<% end %>
-			<% end %>
-		</p>
-	<% end %>	
 </div>
 <div id="button-block">
 		<% if @event.start > DateTime.now && is_html %>
@@ -100,7 +73,34 @@
 	</div>
 <% end %>
 
+		<% if !@event.categories.nil? && @event.categories.length > 0 %>
+		<p>
+			<strong><%= t('.category_header') %></strong>
+			<br />
+			<% @event.categories.each_with_index do |c, i| %>
+				<% separator = ((@event.categories.count - 1) != i) ? ', ' : '' %>
+				<%= link_to c.title, category_events_path(c.title) %><%= separator %>
+			<% end %>
+		</p>
+		<% end %>
+
+		<% if !@event.sponsors.nil? && @event.sponsors.length > 0 %>
+		<p>
+			<strong><%= t('.sponsor_header') %></strong>
+			<br />
+			<% @event.sponsors.each do |s| %>
+				<% if !s.logo_file_name.nil? %>
+					<%= link_to(image_tag(s.logo.url), sponsor_path(s)) %>
+				<% else %>
+					<%= link_to(s.title, sponsor_path(s)) %>
+				<% end %>
+			<% end %>
+		</p>
+		<% end %>
+
 <% if is_html %>
-<div id='map'></div>
+	<div id="map_container_show">
+		<div id="map"></div>
+	</div>
 <% end %>
 
