--- a/app/views/sponsors/view.html.erb
+++ b/app/views/sponsors/view.html.erb
@@ -30,10 +30,10 @@
 			<% end %>
 			<br />
 			<% if !sponsor.email.nil? && sponsor.email.length > 0 %>
-				<%= link_to sponsor.email, sponsor.email %>
+				<%= mail_to sponsor.email %>
 			<% end %>
 			<% if !sponsor.url.nil? && sponsor.url.length > 0 %>
-				<%= link_to sponsor.url, sponsor.url %>
+				<%= link_to sponsor.url, url_with_protocol(sponsor.url) %>
 			<% end %>
 		</p>
 		<% if user_signed_in? %>
