--- a/app/views/sponsors/show.html.erb
+++ b/app/views/sponsors/show.html.erb
@@ -7,31 +7,25 @@
 	<% if !@sponsor.logo_file_name.nil? %>
   	<%= image_tag @sponsor.logo.url, :class => "sponsor_logo" %>
 	<% end %>
+
   <%= simple_format(@sponsor.description) %>
 
 <div class="clear">&nbsp;</div>
 
 <p>
 	<strong><%= t('.contact_header') %></strong>
-	<% if !@sponsor.address.nil? && @sponsor.address.length > 0  %>
-		<br />
-	  <%= @sponsor.address %>
-	<% end %>
-	<% if !@sponsor.phone.nil? && @sponsor.phone.length > 0  %>
-		<br />
-		<%= @sponsor.phone %>
-	<% end %>
-	<% if !@sponsor.fax.nil? && @sponsor.fax.length > 0  %>
-		<br />
-		<%= t('app.common.fax') %>: <%= @sponsor.fax %>
-	<% end %>
-	<% if !@sponsor.email.nil? && @sponsor.email.length > 0  %>
-		<br />
-		<%= mail_to @sponsor.email %>
-	<% end %>
-	<% if !@sponsor.url.nil? && @sponsor.url.length > 0  %>
-		<br />
-		<%= link_to @sponsor.url, url_with_protocol(@sponsor.url) %>
+	<br />
+	<% if (!@sponsor.phone.nil? && @sponsor.phone.length > 0) || (!@sponsor.fax.nil? && @sponsor.fax.length > 0) ||
+			(!@sponsor.email.nil? && @sponsor.email.length > 0) || (!@sponsor.url.nil?&& @sponsor.url.length > 0) %>
+			<%= link_to @sponsor.url, url_with_protocol(@sponsor.url) %>
+			&nbsp;&nbsp;
+			<%= mail_to @sponsor.email %>
+			&nbsp;&nbsp;
+			<%= @sponsor.phone %>
+			&nbsp;&nbsp;
+			<% if !@sponsor.fax.nil? && @sponsor.fax.length > 0 %>
+				<%= t('app.common.fax') %>: <%= @sponsor.fax %>
+			<% end %>
 	<% end %>
 
 </p>
