font changed for logo text

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <div class="c1 def-font">
           <a href="/" class="clear" />
             <img src="/assets/images/logo-german-week.png" />
-            <div class="logo-text">DEUTSCHE WOCHE 14.-20. Mai 2012</div>
+            <div class="logo-text def-font">DEUTSCHE WOCHE 14.-20. Mai 2012</div>
           </a>
         </div><!--#header > .c1-->
 
