--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,5 +5,6 @@
 <% if !@events.nil? && @events.length > 0 %>
 <div class="form-actions">
 	<%= link_to t('app.buttons.pdf'), events_path(:format => 'pdf'), :class => "btn-export-hide", :target => "_blank" %>
+	<%= link_to t('app.buttons.print'), "", :id => "btn-print", :class => "btn-print" %>
 </div>
 <% end %>
