--- a/app/assets/stylesheets/map_page.css
+++ b/app/assets/stylesheets/map_page.css
@@ -26,7 +26,7 @@
 	border-bottom: 1px solid #666;
 	margin: 0px auto;
 	padding: 5px 10px;
-	font-family:arial;
+	font-family: "Times New Roman";
 	font-size:15px;
 	color:#FFF;
 }
