--- a/app/assets/stylesheets/id_countdown.css
+++ b/app/assets/stylesheets/id_countdown.css
@@ -3,7 +3,7 @@
 	height:20px;
 	margin:0 auto;
 	font-size:11px;
-	font-family: Arial,Helvetic;
+	font-family: "Times New Roman";
 	letter-spacing:0px;
 	font-weight:bold;
 	color:#93999D;
