updated locales for multiple pdf and print text; removed categories from event show; on event show, show organizations and sponsors; moved sponsor address into translations for form

--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -423,6 +423,11 @@ img {
         background: #fff;
       }
 
+			#content-board h4{
+				border-bottom: solid thin #000;
+				text-align: center;
+			}
+
       #content-board a
       {
 				text-decoration: underline;
