--- a/app/views/sponsors/_form.html.erb
+++ b/app/views/sponsors/_form.html.erb
@@ -44,6 +44,12 @@
 			    <%= sponsor_translation.input :description, :as => :text, :label => false %>
 			  </div>
 			</div>
+			<div class="control-group">
+				<%= f.label :address, :class => "control-label" %>
+				<div class="controls">
+					<%= sponsor_translation.text_field :address, :class => "text_field", :label => false %>
+				</div>
+			</div>
 			<%= sponsor_translation.hidden_field :locale , :value => formLocale %>
 		</div>
 
@@ -51,13 +57,6 @@
 
 	<%= f.inputs do %>
 
-		<div class="control-group">
-			<%= f.label :address, :class => "control-label" %>
-			<div class="controls">
-			  <%= f.text_field :address, :class => "text_field", :label => false %>
-			</div>
-		</div>
-		
 		<div class="control-group">
 			<%= f.label :phone, :class => "control-label" %>
 			<div class="controls">
