--- a/app/views/sponsors/show.html.erb
+++ b/app/views/sponsors/show.html.erb
@@ -12,19 +12,23 @@
 
 <p>
 	<strong><%= t('.contact_header') %></strong>
-	<br />
+	<% if !@sponsor.address.nil? && @sponsor.address.length > 0 %>
+		<br />
+	  <%= @sponsor.address %>
+	<% end %>
 	<% if (!@sponsor.phone.nil? && @sponsor.phone.length > 0) || (!@sponsor.fax.nil? && @sponsor.fax.length > 0) ||
 			(!@sponsor.email.nil? && @sponsor.email.length > 0) || (!@sponsor.url.nil?&& @sponsor.url.length > 0) %>
-			<%= link_to @sponsor.url, url_with_protocol(@sponsor.url) %>
-			&nbsp;&nbsp;
-			<%= mail_to @sponsor.email %>
-			&nbsp;&nbsp;
-			<%= @sponsor.phone %>
-			&nbsp;&nbsp;
-			<% if !@sponsor.fax.nil? && @sponsor.fax.length > 0 %>
-				<%= t('app.common.fax') %>: <%= @sponsor.fax %>
-			<% end %>
-	<% end %>
+		<br />
+		<%= link_to @sponsor.url, url_with_protocol(@sponsor.url) %>
+		&nbsp;&nbsp;
+		<%= mail_to @sponsor.email %>
+		&nbsp;&nbsp;
+		<%= @sponsor.phone %>
+		&nbsp;&nbsp;
+		<% if !@sponsor.fax.nil? && @sponsor.fax.length > 0 %>
+			<%= t('app.common.fax') %>: <%= @sponsor.fax %>
+		<% end %>
+<% end %>
 
 </p>
 
